# GloveLet

./: .gitignore  .travis.yml  .vision.config  README.md  __init__.py  main.py  requirements.txt  test.py
3d-viewer-tool/: .gitignore  3d-viewer-tool  3d_viewer_utility.cpp  CMakeLists.txt  Polygon.cpp  Polygon.h  README.md  Vertex.cpp  WorldObject.cpp  WorldObject.h  datalog-file-converter  datalog_file_converter.cpp  main.cpp  opengl-debugger-utility.cpp  opengl_debugger_utility.cpp  sample-data-utility  sample-data-utility.cpp  sample_data_utility.cpp  serial_test.cpp
3d-viewer-tool-python/: 3d-viewer-utility.py  mesh.py  opengl-debugger-utility.py  requirements.txt  shadermanager.py  shaders.py  test.py  timeseries.py  viewer3d_utility.py  worldobject.py
3d-viewer-tool-python/shaders/: fragment_shader.glsl  fragment_shader130.glsl  vertex_shader.glsl
3d-viewer-tool/sample_data/: .fast_pickup.data.swp  fast_pickup.data  fast_pickup_sample.log1  pickup_sample.log1
3d-viewer-tool/src/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Polygon.cpp  WorldObject.cpp  WorldObject.h
3d-viewer-tool/src/BoostWrapper/: BoostWrapper.cpp  BoostWrapper.h  WorldObjectWrapper.cpp
3d-viewer-tool/src/Template Objects/: TemplateObjects.cpp  TemplateObjects.h
3d-viewer-tool/src/World Objects/: Axis.cpp  Axis.h  Mesh.cpp  Mesh.h  Polygon.cpp  Vertex.cpp  WorldObject.cpp  WorldObject.h
3d-viewer-tool/src/utility/: DataTimeSeries.cpp  DataTimeSeries.h  DatalogParser.cpp  DatalogParser.h  DatalogReader.cpp  DatalogReader.h  Serial.cpp  Serial.h  ahrs_common.h  debug.cpp  debug.h
3d-viewer-tool/src/utility/MadgwickAHRS/: MadgwickAHRS.cpp  MadgwickAHRS.h
3d-viewer-tool/src/utility/MahonyAHRS/: MahonyAHRS.cpp  MahonyAHRS.h
3d_viewer_python/: README.md  main.py
Arduino/MPU6050_raw/: MPU6050_raw.ino
Arduino/MPU6050_raw/MPU6050_raw.ino/: MPU6050_raw.ino.ino
Arduino/Script/: sketch.ino
Arduino/Script/sketch/: sketch.ino
Bluetooth/atcommand/: BluefruitConfig.h
Bluetooth/bluetooth/: bluetooth.ino
env/: pip-selfcheck.json
env/local/: bin  include  lib
eventapi/: __init__.py  event.py  event_example.py  glovelet_hardware_events.py  glovelet_vision_events.py  test_eventapi.py
glut_test/: CMakeLists.txt  WorldObject.cpp  WorldObject.h  main.cpp
imu/: README.md  imu_data.py
misc/: activate  all_requirements.txt  ble_requirments.txt  requirements.txt  requirements01.txt  requirements02.txt
sensorapi/: __init__.py  glovelet_sensormonitor.py  imu.py  sensor.py  sensorstream.py  sensorstreamchannel.py  test.py
serial_comm/: README.md  Serial.cpp  Serial.h  a.out  bin  example.cpp
serial_comm_py/: serial_comm.py
server/: main.py  requirements.txt
tests/: vision_event_api_test.py
utility/: map.py  motion_multiplier.py  signalviewerutil.py  timeseries.py  timeseries_new.py
viewer3DToolPython/: __init__.py  commit.txt  glovelet3DDemo.py  imuapi.py  mesh.py  requirements.txt  shadermanager.py  shaders.py  test.py  viewer3d_utility.py  worldobject.py
viewer3DToolPython/shaders/: fragment_shader.glsl  vertex_shader130.glsl
vision/: .vision.config  GestureAPI.py  README.MD  background_subtraction.py  frame_rate.py  gesture.py  gestureAPI.py  requirements.txt  run.py  storeGesture.py  vision-api.py  vision.py
vision-color/: .vision.conf  .vision.config  README.MD  range-detector.py  rd.py  red-color-tracking.py  store_config.txt  timeseries.py  vision-api.py  vision.py
vision/test_scipts/: rangeDetector.py
